tests/baselines/reference/inlineJsxAndJsxFragPragmaOverridesCompilerOptions.errors.txt
snabbdomy.tsx(6,1): error TS2879: Using JSX fragments requires fragment factory 'null' to be in scope, but it could not be found.


==== react.d.ts (0 errors) ====
    declare global {
        namespace JSX {
            interface IntrinsicElements {
                [e: string]: any;
            }
        }
    }
    export function createElement(): void;
    export function Fragment(): void;
    
==== preact.d.ts (0 errors) ====
    export function h(): void;
    export function Frag(): void;
    
==== snabbdom.d.ts (0 errors) ====
    export function h(): void;
    
==== reacty.tsx (0 errors) ====
    import {createElement, Fragment} from "./react";
    <><span></span></>
    
==== preacty.tsx (0 errors) ====
    /**
     * @jsx h
     * @jsxFrag Frag
     */
    import {h, Frag} from "./preact";
    <><div></div></>
    
==== snabbdomy.tsx (1 errors) ====
    /**
     * @jsx h
     * @jsxfrag null
     */
    import {h} from "./snabbdom";
    <><div></div></>
    ~~
!!! error TS2879: Using JSX fragments requires fragment factory 'null' to be in scope, but it could not be found.
    
==== mix-n-match.tsx (0 errors) ====
    /* @jsx h */
    /* @jsxFrag Fragment */
    import {h} from "./preact";
    import {Fragment} from "./react";
    <><span></span></>